--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -41,6 +41,8 @@ dependencies:
   network_info_plus: ^2.1.3
   percent_indicator: 4.0.0
   blinking_text: ^1.0.2
+  dart_ping: ^6.1.2
+  dart_ping_ios: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
