--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   blinking_text: ^1.0.2
   dart_ping: ^6.1.2
   dart_ping_ios: ^1.1.0
+  adaptive_dialog: ^1.6.3
 
 
   # The following adds the Cupertino Icons font to your application.
