--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: 2.0.11
   timeago: 3.1.0
   url_launcher: 6.0.15
+  flutter_launcher_icons: ^0.9.2
 
   wake_on_lan: ^3.0.0
   network_info_plus: ^2.1.3
@@ -56,6 +57,12 @@ dev_dependencies:
 
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: 'assets/images/app_launcher_icon.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
